--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,10 @@ h1, h2, h3, h4, h5, h6, p, a{
     z-index: 100;
 }
 
+div.modal img{
+    width: 100%;
+}
+
 
 
 /*--------------- MENU------------------- */
@@ -52,7 +56,7 @@ header div.menu_bar span {
 
 nav {
 	width: 100%;
-	height: 130px;
+    height: 100px;
 	background: #fff;
     box-shadow: 2px 10px 23px -8px rgba(0,0,0,0.29);  
 }
@@ -82,7 +86,7 @@ nav.menu ul a:hover {
 
 nav.menu ul li img.menuImg{
     width: 100px;
-    height: 80px;
+    height: 50px;
 }
 
 .btnMenu{
@@ -102,12 +106,16 @@ nav.menu ul li img.menuImg{
 
 /*--------------- INICIO------------------- */
 
+section#inicio{
+    background-image: url(../img/fondo_inicio.jpg);
+    background-size: cover;
+}
 
 div.banner{
-	background-color: green;
 	width: 100%;
 	height: 50%;
-    padding-top: 100px;
+    padding-top: 200px;
+    color: #FFF;
     
 }
 
@@ -119,9 +127,12 @@ div.banner{
 
 /*--------------- GALERIA------------------- */
 section#galeria{
-	color: #49C1BF;
+	color: #FFF;
     margin-top: 130px;
-    padding-bottom: 100px;
+    padding: 100px 100px;
+    background-image: url(../img/fondo_galeria.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 	
 }
 
@@ -137,8 +148,7 @@ section#galeria div.carousel{
 }
 
 section#galeria div.carousel div.carousel-inner{
-	height: 600px;
-	border-radius: 40px 40px 40px 40px;
+	height: auto;
 }
 
 
@@ -252,7 +262,8 @@ section#contacto  input.boton{
 
 /*--------------FOOTER-----------------*/
 footer{
-    background-color: #374957;
+    background-image: url(../img/footer.png);
+    background-size: cover;
 }
 
 footer section{
