--- a/includes/talleres.html
+++ b/includes/talleres.html
@@ -15,12 +15,12 @@
     <section id="logo">
         <div class="row">
             <div class="col-12 text-center">
-                <img src="img/logotipo_negro.png" alt="Logo">
+                <img src="../img/LOGO.png" alt="Logo">
             </div>
         </div>
     </section>
     <div class="menu_bar">
-        <a href="#inicio"><img src="img/logotipo_negro.png" alt="Logo"></a>
+        <a href="#inicio"><img src="../img/LOGO.png" alt="Logo"></a>
         <span class="bt-menu"><i class="fa fa-bars" aria-hidden="true"></i></span>
     </div>
   <nav class="menu fixed">
@@ -42,10 +42,10 @@
 </section>
 <section id="infoEvento">
   <div class="row">
-    <div class="col-7">
-      <h2 class="prueba">Información del evento</h2>
+    <div class="col-7 p-5">
+      <h2 class="Omiwa">Información del evento</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis vel pariatur alias nostrum totam mollitia, deleniti! Ad error laudantium nesciunt dolores, provident fugit doloremque architecto exercitationem, nam explicabo, accusantium nobis.</p>
-      <h2 class="prueba">Actividades</h2>
+      <h2 class="Omiwa">Actividades</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis vel pariatur alias nostrum totam mollitia, deleniti! Ad error laudantium nesciunt dolores, provident fugit doloremque architecto exercitationem, nam explicabo, accusantium nobis.</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis vel pariatur alias nostrum totam mollitia, deleniti! Ad error laudantium nesciunt dolores, provident fugit doloremque architecto exercitationem, nam explicabo, accusantium nobis.</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis vel pariatur alias nostrum totam mollitia, deleniti! Ad error laudantium nesciunt dolores, provident fugit doloremque architecto exercitationem, nam explicabo, accusantium nobis.</p>
@@ -59,8 +59,8 @@
     </div>
   </div>
 </section>
-<section id="ubicacion">
-  <h2 class="prueba">Horarios y Ubicación</h2>
+<section id="ubicacion" class="p-5">
+  <h2 class="Omiwa">Horarios y Ubicación</h2>
   <p>13,20 y 27 de noviembre</p>
   <p>De 4:30 a 5:30pm</p>
   <p>Biblioteca Abad Mateo Martín (a un costado de la Basilica)</p>
@@ -71,9 +71,9 @@
     </div>
   </div>
 </section>
-<section id="contacto" class="row">
+<section id="contactoTaller" class="row">
   <div class="col-12 text-center mb-5">
-    <h2 class="prueba">Para más información</h2>
+    <h2 class="Omiwa">Para más información</h2>
     <p>Escribe a nuestro correo o síguenos en nuestras redes sociales</p>
   </div>
   <div class="col-4 text-center">
