--- a/includes/talleres.html
+++ b/includes/talleres.html
@@ -42,20 +42,17 @@
 </section>
 <section id="infoEvento">
   <div class="row">
-    <div class="col-7 p-5">
+    <div class="col-10 p-5">
       <h2 class="Omiwa">Información del evento</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis vel pariatur alias nostrum totam mollitia, deleniti! Ad error laudantium nesciunt dolores, provident fugit doloremque architecto exercitationem, nam explicabo, accusantium nobis.</p>
+      <p>Como parte de nuestra proyección hacia la niñez, hemos decidido impartir tres talleres de lectura los días 13, 20 y 27 de noviembre en la Biblioteca Abad Mateo Martin OSB (a un costado de la Basílica). Estos son impartidos por Gerson Chinchilla Portillo y Juan Manuel Josué Nájera (miembros del Movimiento Asturias). Los talleres van dirigidos a niños y niñas entre 8 a 12 años que deseen pasar unas vacaciones divertidas y llenas de aprendizaje.</p>
       <h2 class="Omiwa">Actividades</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis vel pariatur alias nostrum totam mollitia, deleniti! Ad error laudantium nesciunt dolores, provident fugit doloremque architecto exercitationem, nam explicabo, accusantium nobis.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis vel pariatur alias nostrum totam mollitia, deleniti! Ad error laudantium nesciunt dolores, provident fugit doloremque architecto exercitationem, nam explicabo, accusantium nobis.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis vel pariatur alias nostrum totam mollitia, deleniti! Ad error laudantium nesciunt dolores, provident fugit doloremque architecto exercitationem, nam explicabo, accusantium nobis.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis vel pariatur alias nostrum totam mollitia, deleniti! Ad error laudantium nesciunt dolores, provident fugit doloremque architecto exercitationem, nam explicabo, accusantium nobis.</p>
+      <p>Cada año buscamos temáticas y libros diferentes, para abarcar diversos géneros literarios. En base a los mismos, se realizan actividades para que los niños se sientan parte de la información brindada y puedan compartir sus opiniones e ideas con otros, esto a su vez permite que su imaginación incremente.</p>
+      <p>- En el primer taller conoceremos la historia de Amelia Earhart (aviadora que intentó realizar el primer viaje aéreo alrededor del mundo sobre la línea ecuatorial) y realizaremos avioncitos de papel para recrear el viaje.</p>
+      <p>- En el segundo taller de lectura hablaremos de Helen Keller y leeremos a Cortázar. Simularemos la escritura braille y haremos figuritas para comunicarnos, con el fin de mostrar a los niños diferentes medios de comunicación inclusiva.</p>
+      <p>- En el tercer y último taller de lectura, hablaremos de Rachel Carson (bióloga marina que contribuyó a la puesta en marcha de la moderna conciencia ambiental) y trabajaremos con origami para aumentar las habilidades creativas mientras escuchan las historias.</p>
     </div>
-    <div class="col-5">
-      <img src="../img/niño.jpg">
-    </div>
-    <div class="col-12 text-center">
-      <img src="../img/evento_img.jpg">
+    <div class="col-2">
+      <img src="../img/niño.jpg" alt="niño_img" style="width: 100%; height: 100%">
     </div>
   </div>
 </section>
