--- a/includes/talleres.html
+++ b/includes/talleres.html
@@ -89,8 +89,8 @@
 <footer>
   <section class="row">
     <div class="col-12 text-center">
-      <a href="#"><img src="../img/facebooklogo.png"></a>
-      <a href="#"><img src="../img/instagramlogo.png"></a>
+      <a href="https://www.facebook.com/MovimientoAsturias/?epa=SEARCH_BOX"><img src="../img/facebooklogo.png"></a>
+      <a href="https://www.instagram.com/movimientoasturias/?hl=es-la"><img src="../img/instagramlogo.png"></a>
     </div>
     <div class="col-12 text-center">
       <p>Copyright © 2019 Movimiento Asturias. All rights reserved.</p>    
