--- a/includes/talleres.html
+++ b/includes/talleres.html
@@ -54,6 +54,9 @@
     <div class="col-2">
       <img src="../img/niño.jpg" alt="niño_img" style="width: 100%; height: 100%">
     </div>
+    <div class="col-12 text-center">
+      <img src="../img/imagen_talleres.jpg" style="width: 50%">
+    </div>
   </div>
 </section>
 <section id="ubicacion" class="p-5">
