--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ nav.menu ul li img.menuImg{
 /*--------------- INICIO------------------- */
 
 section#inicio{
-    background-image: url(../img/prueba3.jpg);
+    background-image: url(../img/banner.jpg);
     background-size: cover;
 }
 
