--- a/includes/talleres.html
+++ b/includes/talleres.html
@@ -42,7 +42,7 @@
 </section>
 <section id="infoEvento">
   <div class="row">
-    <div class="col-10 p-5">
+    <div class="col-12 col-sm-10 p-5">
       <h2 class="Omiwa">Información del evento</h2>
       <p>Como parte de nuestra proyección hacia la niñez, hemos decidido impartir tres talleres de lectura los días 13, 20 y 27 de noviembre en la Biblioteca Abad Mateo Martin OSB (a un costado de la Basílica). Estos son impartidos por Gerson Chinchilla Portillo y Juan Manuel Josué Nájera (miembros del Movimiento Asturias). Los talleres van dirigidos a niños y niñas entre 8 a 12 años que deseen pasar unas vacaciones divertidas y llenas de aprendizaje.</p>
       <h2 class="Omiwa">Actividades</h2>
@@ -51,7 +51,7 @@
       <p>- En el segundo taller de lectura hablaremos de Helen Keller y leeremos a Cortázar. Simularemos la escritura braille y haremos figuritas para comunicarnos, con el fin de mostrar a los niños diferentes medios de comunicación inclusiva.</p>
       <p>- En el tercer y último taller de lectura, hablaremos de Rachel Carson (bióloga marina que contribuyó a la puesta en marcha de la moderna conciencia ambiental) y trabajaremos con origami para aumentar las habilidades creativas mientras escuchan las historias.</p>
     </div>
-    <div class="col-2">
+    <div class="col-2 niño">
       <img src="../img/niño.jpg" alt="niño_img" style="width: 100%; height: 100%">
     </div>
     <div class="col-12 text-center">
@@ -67,7 +67,7 @@
   <p>*la entrada es libre (sin costo)</p>
   <div class="row">
     <div class="col-12 text-center">
-      <img src="../img/mapa.jpg">
+      <img src="../img/mapa.jpg" style="width: 100%;">
     </div>
   </div>
 </section>
@@ -76,15 +76,15 @@
     <h2 class="Omiwa">Para más información</h2>
     <p>Escribe a nuestro correo o síguenos en nuestras redes sociales</p>
   </div>
-  <div class="col-4 text-center">
+  <div class="col-4 text-center iconos">
     <i class="fa fa-facebook" aria-hidden="true"></i>
     <p>Movimiento asturias</p>
   </div>
-  <div class="col-4 text-center">
+  <div class="col-4 text-center iconos">
     <i class="fa fa-envelope-o" aria-hidden="true"></i>
     <p>movimientoasturias@gmail.com</p>
   </div>
-  <div class="col-4 text-center">
+  <div class="col-4 text-center iconos">
     <i class="fa fa-instagram" aria-hidden="true"></i>
     <p>Movimiento asturias</p>
   </div>
