--- a/includes/talleres.html
+++ b/includes/talleres.html
@@ -19,9 +19,8 @@
             </div>
         </div>
     </section>
-    <div class="menu_bar">
-        <a href="#inicio"><img src="../img/LOGO.png" alt="Logo"></a>
-        <span class="bt-menu"><i class="fa fa-bars" aria-hidden="true"></i></span>
+    <div class="menu_bar text-center">
+        <a href="../index.html"><img src="../img/LOGO.png" alt="Logo"></a>
     </div>
   <nav class="menu fixed">
     <ul class="container d-flex justify-content-center">
